# hello_math

./: README.md
hello_symengine/: CMakeLists.txt  charles_symengine_common.cpp  charles_symengine_common.h  hello_world.cpp  multivariable_extream.cpp  multivariable_extream.h  unit_test.cpp  unit_test.h
hello_symengine/cmake/: config.cmake.in
